--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(BUSTERS_Team_5_Project_BHASVIC_EddieChow24 C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(BUSTERS_Team_5_Project_BHASVIC_EddieChow24 "main.program.c")
+add_executable(BUSTERS_Team_5_Project_BHASVIC_EddieChow24
+        "Check out.c")
