--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,4 @@ project(BUSTERS_Team_5_Project_BHASVIC_EddieChow24 C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(BUSTERS_Team_5_Project_BHASVIC_EddieChow24
-
-        "main.c")
+add_executable(BUSTERS_Team_5_Project_BHASVIC_EddieChow24 "main.c")
